<resources>
    <string name="app_name">Create add layout</string>
    <string name="addPerson">Add Person</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="age">Age</string>
    <string name="hobby">Hobby</string>
    <string name="sex">Sex</string>
    <string name="generic_error_message">An unexpected error occurred. Please try again later.</string>
    <string name="add_contact_success_message">Contact ADD successfully.</string>
    <string name="message_field_required">Field %s is required!</string>
    <string name="welcome_message">Olá %s, bem vindo ao app Minha lista de Contatos!</string>
    <string name="welcome_message_initial">Bem vindo a %s, aqui você encontra o app Minha lista de Contatos!</string>
    <string name="type_name">Digite seu Nome:</string>
    <string name="got_know">Conhecer</string>
    <string name="got_login">Login</string>
    <string name="login_error">Login Error</string>
    <string name="type_email">Digite seu e-mail:</string>
    <string name="e_mail">E-mail: %s</string>
    <string name="field_name">Preencha o campo com o seu Nome!</string>
    <string name="email_field">E-mail inválido!</string>
    <string name="phone_input">Phone: %s</string>
    <string name="update_ser">Atualizar Usuário</string>
    <string name="phone_not_informed">Não foi informado nenhum telefone!</string>
    <string name="cadastro_title">Cadastre-se</string>
    <string name="cadastro_description">Crie seu cadastro para ter acesso ao incrível app de lista de contatos.</string>
    <string name="username_hint">Nome:</string>
    <string name="username_email">E-mail:</string>
    <string name="username_phone">Phone:</string>
    <string name="password">Senha:</string>
    <string name="password_confirmation">Confirme sua senha:</string>
    <string name="sing_up">Cadastre-se</string>
    <string name="cadastrar">Cadastrar e Logar</string>
    <string name="error_sign_up">Houve algum problema no cadastro, verifique os dados e tente novamente.</string>
    <string name="message_password_not_match">As senha são diferentes!</string>
    <string name="password_field">Senha inválida!</string>
    <string name="error_retrieving_data">Não foi possível carregar a sua lista de contatos.</string>
    <string name="houses">Casas de Harry Potter</string>
    <string name="join">Click no Card para Entrar</string>
</resources>